implement getinvoice controller
